Prevent images from stretching. Fixes #8. Part fixes #4

--- a/style.css
+++ b/style.css
@@ -47,3 +47,13 @@ Add CSS to prevent large and full sized images from losing their aspect ratio
 .wp-block-image img {
     height: auto;
 }
+/**
+Prevent media and text images from stretching.
+ */
+.wp-block-media-text__media img, .wp-block-media-text__media video {
+    height: auto;
+}
+
+.wp-block-navigation img {
+    height: auto;
+}
